cluster_configs/cluster1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: country
  name: country
spec:
  ports:
  - port: 9080
    protocol: TCP
    name: tcp
  selector:
    app: country
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: country
  name: country
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: country
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: country
    spec:
      containers:
      - image: country/country:some_tag
        imagePullPolicy: IfNotPresent
        name: demo
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: client
  name: client
spec:
  ports:
  - port: 9080
    protocol: TCP
    name: tcp
  selector:
    app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: client
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: client
      annotations:
        sidecar.istio.io/statsInclusionPrefixes: reporter=,component,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc,ssl_context_update_by_sds,thrift
    spec:
      containers:
      - image: client/client:some_tag
        imagePullPolicy: IfNotPresent
        name: demo
        resources: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: istio-thrift
spec:
  workloadSelector:
    labels:
      app: country
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        portNumber: 9080
        filterChain:
          filter:
            name: envoy.tcp_proxy
    patch:
      operation: REMOVE
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        portNumber: 9080
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.filters.network.thrift_proxy
        config:
          stat_prefix: "outbound|9080||country.istio-thrift.svc.cluster.local"
          transport: AUTO_TRANSPORT
          protocol: AUTO_PROTOCOL
          thrift_filters:
          - name: envoy.filters.thrift.router
          route_config:
            routes:
            - match:
                method_name: ""
              route:
                cluster: "outbound|9080||country.istio-thrift.svc.cluster.local"
